dark mode in login fix

--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@
   --off-white: #f0ffff;
   --off-black: #1c1d1d;
   --yellow: #FFECA0;
+  --input-color: #f0ffff;
   --header-height: 10vh;
   --footer-height: 10vh;
 }
@@ -10,6 +11,7 @@
     --off-black: #f0ffff;     /* Dark mode "off-black" color */
     --off-white: #1c1d1d;     /* Dark mode "off-white" color */
     --yellow: #E8A8A0;
+    --input-color: #3F3F3F;
   }
 
 * {
@@ -404,18 +406,20 @@ footer {
   padding: 10px;
   font-family: "Alice", sans-serif;
   font-size: clamp(8px, 2vw, 24px);
-  border: 1px solid #ddd;
+  color: var(--off-black);
+  border: 1px solid var(--off-white);
   border-radius: 10px;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: var(--input-color);
 }
 
 .input-group input:focus {
   outline: none;
-  border-color: #007bff;
+  border-color: var(--yellow);
 }
 
 .input-group input::placeholder {
-  color: #aaa;
+  color: var(--off-black);
 }
 
 /* Button Section */
